--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".OrderActivity"></activity>
+        <activity android:name=".AdidasAdvertActivity"></activity>
         
 
     </application>
