--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
 	
 	<uses-permission android:name="" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+    	<service android:name="uc.tjt.estadium.EStadiumService" android:enabled="true"></service>
         <activity android:name=".EStadiumActivity"
                   android:label="@string/app_name">
             <intent-filter>
