--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
 	
 	<uses-permission android:name="" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-    	<service android:name="uc.tjt.estadium.EStadiumService" android:enabled="true"></service>
+    	<service android:name=".EStadiumService" android:enabled="true"></service>
         <activity android:name=".EStadiumActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -28,8 +28,6 @@
         <activity android:name=".SeatingActivity"></activity>
         <activity android:name=".SpecialOffersActivity"></activity>
         <activity android:name=".RedeemVoucherActivity"></activity>
-        
-        
-
+        <activity android:name=".EventSelectionActivity"></activity>
     </application>
 </manifest>
